--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,34 @@ font-family: "Roboto", sans-serif; */
 header bg color: #ececec;
 hero bg color: #2f303a;*/
 
-/* преимущества, чем мы занимаемся, команда и портфолио. */
-
 /* main css */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
 body {
   background-color: var(--white-color);
   color: var(--primary-text-color);
@@ -27,64 +52,177 @@ body {
   font-style: var(--primary-font-style);
 }
 
-.list {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* hero block */
-.hero-title,
-.feature-title {
-  text-transform: uppercase;
-}
-
-.hero-title {
-  font-size: 44px;
-  font-weight: 900;
-  line-height: 1.4;
-  letter-spacing: 0.06em;
-  background-color: #2f303a;
-  color: #ffffff;
+/* ==========COMPONENTS============ */
+/* ========BUTTON=========== */
+.button {
   display: block;
-  width: 1600px;
-  height: 600px;
-}
-
-.section-hero {
-  text-align: center;
-  vertical-align: center;
-  padding-top: 201;
-  padding-right: 456;
-}
-
-.order-button {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  cursor: pointer;
+  min-width: 200px;
+  min-height: 50px;
   background-color: #2196f3;
   color: #ffffff;
   text-align: center;
   border: none;
   border-radius: 3px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  margin: 0 auto;
 }
-.order-button {
-  cursor: pointer;
-}
-
-.order-button:hover {
+.button:hover,
+.button:focus {
   color: #000000;
 }
+/* ========end of BUTTON=========== */
+/* ========LOGO=========== */
+.header-logo,
+.accent-logo,
+.footer-logo {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+.header-logo {
+  color: var(--primary-text-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 93px;
+}
+.footer-logo {
+  display: inline-block;
+  color: var(--white-color);
+  margin-bottom: 33px;
+}
+.accent-logo {
+  color: var(--accent-text-color);
+}
+/* ========end of LOGO=========== */
 
-/* sections особенности и чем мы занимаемся */
-.feature-section,
-.works-section {
-  background-color: E5E5E5;
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+/* ==========end of COMPONENTS============ */
+
+/* =========HEADER=========== */
+
+.header {
+  background-color: #ececec;
+  margin: 0;
+  border-bottom: 1px solid black;
+}
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
+/* ======HEADER-NAVIGATION======= */
+.site-nav,
+.site-nav-list,
+.contacts-nav {
+  display: flex;
+  align-items: center;
+}
+.site-nav-list {
+  justify-content: space-between;
+}
+.site-nav-list-item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  margin-right: 50px;
+}
+.site-nav-list-link {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+.site-nav-list-link:hover,
+.site-nav-list-link:focus {
+  color: var(--accent-text-color);
+}
+.site-nav-list-link.current {
+  color: var(--accent-text-color);
+}
+.site-nav-list-link.current:active {
+  color: var(--accent-text-color);
+}
+/* ======end of HEADER-NAVIGATION======= */
+
+/* ======HEADER CONTACTS-NAV======= */
+.contacts-nav-link {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+.contacts-nav-link:hover,
+.contacts-nav-link:focus {
+  color: var(--accent-text-color);
+}
+.contacts-nav-item {
+  margin-right: 50px;
+}
+/* ======end of HEADER CONTACTS-NAV======= */
+/* =========end of HEADER=========== */
+
+/* ==========MAIN PAGE sections============== */
+/* ==========HERO============ */
+.hero-title,
+.feature-title {
+  text-transform: uppercase;
+}
+.hero {
+  background-color: #2f303a;
+}
+.hero .container {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+.hero-title {
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+/* =============FEATURES==================== */
+.feature-section,
+.about-section {
+  background-color: E5E5E5;
+}
+.feature-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.feature-list-item {
+  flex-basis: calc((100% - 4 * 30px) / 4);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+.feature-section .section-title {
+  display: none;
+}
 .section-title,
 .feature-title {
   font-weight: 700;
@@ -93,15 +231,35 @@ a {
 }
 .section-title {
   font-size: 36px;
+  margin-bottom: 50px;
+  text-align: center;
 }
-
 .feature-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+.feature-section .feature-description {
+  margin: 0;
 }
 
+/* =============end of FEATURES==================== */
+/* =============ABOUT==================== */
+.about-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.about-list-item {
+  flex-basis: calc((100% - 3 * 30px) / 3);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+/* =============end of ABOUT==================== */
+/* =============OUR TEAM==================== */
 .team-section {
   background-color: var(--secondary-bg-color);
 }
@@ -113,132 +271,131 @@ a {
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
-
 .team-role {
   font-size: 16px;
+  margin: 0;
 }
 .team-member-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
 }
-
-.feature-list,
-.works-list,
 .our-team-list {
   display: flex;
   flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
 }
+.our-team-list-item {
+  flex-basis: calc((100% - 4 * 30px) / 4);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+/* .our-team-member-photo {как кропнуть фото правильно, чтобы портрет был крупнее???;} */
+.member-card-text {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+/* =============end of OUR TEAM==================== */
 
-/* header & footer */
-/* 1__logo top and bottom of the page */
-.site-nav .logo,
-.site-nav .accent-logo,
-.footer-logo,
-.footer .accent-logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
-.site-nav .logo {
-  color: var(--primary-text-color);
-}
-.footer-logo {
-  color: var(--white-color);
-  padding-left: 40px;
-  padding-top: 60px;
-}
-.site-nav .accent-logo,
-.footer .accent-logo {
-  color: var(--accent-text-color);
-}
-
-.header {
-  border-bottom: 1px solid black;
-}
-
-/* 2__header navigation links */
-
-.header {
-  background-color: #ececec;
-  margin: 0;
-}
-.site-nav .link {
-  color: var(--primary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-text-color);
-}
-
-.site-nav .link.current {
-  color: var(--accent-text-color);
-}
-.site-nav .link.current:active {
-  color: var(--accent-text-color);
-}
-/* 3__header contacts links */
-
-/* .contacts-nav {
-  text-align: right;} */
-
-.contacts-nav .link {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-}
-
-.contacts-nav .link:hover,
-.contacts-nav .link:focus {
-  color: var(--accent-text-color);
-}
-
-/* 3 - footer address & contacts links */
+/* =============FOOTER==================== */
 .footer {
   background-color: #2f303a;
-  margin: 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
-.footer .footer-address {
+.footer-address {
+  display: inline-block;
   color: var(--white-color);
   font-style: var(--primary-font-style);
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  padding-top: 20px;
-  padding-left: 40px;
+  margin-bottom: 8px;
 }
-.footer .link {
+.footer-links-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.footer-links-link {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
 }
-.footer .link:hover,
-.footer .link:focus {
+.footer-address:hover,
+.footer-address:focus,
+.footer-links-link:hover,
+.footer-links-link:focus {
   color: var(--accent-text-color);
 }
-/* end of footer */
+/* ============END OF FOOTER=========== */
+/* ==========END of MAIN PAGE sections============== */
 
-/* porfolio page css */
+/* ===========PORTFOLIO page============== */
 
 .portfolio-page {
   background-color: #e5e5e5;
   margin: 0;
 }
+.portfolio-title {
+  display: none;
+}
 
+/*========PORTFOLIO-BUTTONS==========  */
+.radiobuttons-list {
+  display: flex;
+  justify-content: center;
+}
+.radiobuttons-list-item {
+  display: inline-block;
+  padding: 0;
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+.radiobuttons-list-item:not(:last-child) {
+  margin-right: 8px;
+}
+.portfolio-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03;
+  color: var(--primary-text-color);
+  background-color: var(--secondary-bg-color);
+  border: none;
+  border-radius: 4px;
+  min-height: 38px;
+  padding: 6px 22px;
+}
+.portfolio-button:hover,
+.portfolio-button:focus {
+  color: var(--white-color);
+  background-color: #2196f3;
+}
+/*========end of PORTFOLIO-BUTTONS==========  */
+/*========PORTFOLIO-PROJECTS==========  */
+.portfolio-projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  margin-right: -30px;
+}
+.portfolio-projects-list-item {
+  margin-left: 30px;
+  margin-top: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-bottom: 1px solid #eeeeee;
+}
+.portfolio-project-card-text {
+  padding: 20px 24px;
+  background-color: var(--white-color);
+}
 .project-title {
   font-weight: 700;
   font-size: 18px;
@@ -246,7 +403,6 @@ a {
   color: var(--primary-text-color);
   letter-spacing: 0.06em;
 }
-
 .project-description {
   font-weight: 400;
   font-size: 16px;
@@ -255,34 +411,4 @@ a {
   letter-spacing: 0.03em;
 }
 
-.radiobuttons-set li {
-  display: inline-block;
-  padding: 0;
-  margin: 8px;
-}
-
-.button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03;
-  color: var(--primary-text-color);
-}
-
-.button {
-  background-color: var(--secondary-bg-color);
-  border: none;
-}
-
-.button:hover,
-.button:focus {
-  color: var(--white-color);
-  background-color: #2196f3;
-}
-
-/* end of portfolio page */
-
-.container {
-  width: 1200px;
-  /* justify-content: center; */
-}
+/* ===========END of PORTFOLIO page============== */
